; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/tools/perf/bench/extr_mem-memcpy.c_timeval2double.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/tools/perf/bench/extr_mem-memcpy.c_timeval2double.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeval = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (double (%struct.timeval*)* @timeval2double to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @timeval2double(%struct.timeval* %0) #0 {
  %2 = alloca %struct.timeval*, align 8
  store %struct.timeval* %0, %struct.timeval** %2, align 8
  %3 = load %struct.timeval*, %struct.timeval** %2, align 8
  %4 = getelementptr inbounds %struct.timeval, %struct.timeval* %3, i32 0, i32 1
  %5 = load i64, i64* %4, align 8
  %6 = sitofp i64 %5 to double
  %7 = load %struct.timeval*, %struct.timeval** %2, align 8
  %8 = getelementptr inbounds %struct.timeval, %struct.timeval* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = sitofp i64 %9 to double
  %11 = fdiv double %10, 1.000000e+06
  %12 = fadd double %6, %11
  ret double %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
